--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="./src/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABNB Project</title>
+    <title>🐚 Ocean Spots</title>
   </head>
   <body>
     <div id="root"></div>
